# lace

./: .drone.yml  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Changelog.md  Dockerfile  LICENSE  PUBLISHING.md  README.md  build.rs  publish.sh
book/lace_preprocess_mdbook_yaml/: Cargo.toml
book/lace_preprocess_mdbook_yaml/src/: lib.rs  main.rs
braid/: Cargo.toml  Changelog.md  build.rs  deny.toml  publish.sh
braid/benches/: insert_data.rs  oracle_fns.rs
braid/braid_cc/: Cargo.toml
braid/braid_cc/benches/: all_algs.rs
braid/braid_cc/src/: assignment.rs  component.rs  config.rs  lib.rs  misc.rs  state.rs  traits.rs  transition.rs  view.rs
braid/braid_cc/tests/: state.rs  view.rs  view_enum.rs
braid/braid_codebook/: Cargo.toml
braid/braid_codebook/examples/: bench_csv.rs
braid/braid_codebook/src/: codebook.rs  csv.rs  data.rs  error.rs  lib.rs  parquet.rs
braid/braid_consts/: Cargo.toml
braid/braid_consts/src/: lib.rs
braid/braid_data/: Cargo.toml
braid/braid_data/src/: data_store.rs  datum.rs  feature.rs  label.rs  lib.rs  sparse.rs
braid/braid_flippers/: Cargo.toml  README.md
braid/braid_flippers/benches/: benches.rs
braid/braid_flippers/src/: lib.rs
braid/braid_geweke/: Cargo.toml
braid/braid_geweke/src/: lib.rs  tester.rs
braid/braid_metadata/: Cargo.toml  README.md
braid/braid_metadata/src/: config.rs  convert.rs  error.rs  latest.rs  lib.rs  utils.rs
braid/braid_metadata/tests/: compat.rs
braid/braid_stats/: Cargo.toml  README.md
braid/braid_stats/benches/: labeler.rs
braid/braid_stats/examples/: adaptive_symrw_mv.rs  lnm.rs  novel_label.rs
braid/braid_stats/src/: cdf.rs  dist.rs  entropy.rs  integrate.rs  lib.rs  mat.rs  mh.rs  mixture_type.rs  perm.rs  sample_error.rs  simplex.rs
braid/braid_utils/: Cargo.toml  README.md
braid/braid_utils/src/: lib.rs  matrix.rs  misc.rs  numbers.rs  stats.rs
braid/examples/: animals.rs  bench.rs  column_geweke.rs  count_model.rs  nix.rs  satellites.rs  shapes.rs  state_geweke.rs  update.rs  view_geweke.rs
braid/resources/test/: bv-continuous.yaml  single-categorical.yaml  single-continuous.yaml  single-count.yaml  (+2 more)
braid/src/: bencher.rs  config.rs  defaults.rs  index.rs  lib.rs  misc.rs
braid/tests/: cli.rs  engine.rs  feature.rs  insert_instability.rs  oracle.rs  streaming_insert.rs  workflow.rs
braid_cc/: Cargo.toml
braid_cc/benches/: all_algs.rs  feature_prior_update.rs  state_types.rs
braid_cc/src/: alg.rs  assignment.rs  component.rs  lib.rs  misc.rs  mod.rs  state.rs  traits.rs  transition.rs  view.rs
braid_cc/tests/: enum.rs  enum_state.rs  state.rs  view.rs  view_enum.rs
braid_codebook/: Cargo.toml  README.md
braid_codebook/src/: codebook.rs  csv.rs  error.rs  gmd.rs  lib.rs
braid_data/: Cargo.toml
braid_data/examples/: bench.rs
braid_data/src/: data_store.rs  datum.rs  dense.rs  feature.rs  lib.rs  sparse.rs  traits.rs
braid_flippers/: Cargo.toml
braid_flippers/benches/: benches.rs
braid_flippers/src/: lib.rs
braid_geweke/: Cargo.toml
braid_geweke/src/: lib.rs  tester.rs  traits.rs
braid_metadata/: Cargo.toml
braid_metadata/src/: common.rs  config.rs  convert.rs  error.rs  latest.rs  lib.rs  utils.rs
braid_server/: .dockerignore  .gitlab-ci.yml  Cargo.toml  Changelog.md  Dockerfile  README.md  deny.toml  publish.sh
braid_server/src/: lib.rs  main.rs  result.rs  server.rs  utils.rs  validate.rs  version.rs
braid_server/tests/: csv.rs  download.rs  draw.rs  entropy.rs  fns.rs  get_data.rs  impute.rs  info.rs  info_prop.rs  insert_data.rs  logp.rs  novelty.rs  predict.rs  simulate.rs  summary.rs  surprisal.rs
braid_stats/: Cargo.toml  README.md
braid_stats/benches/: labeler.rs  seq.rs  simplex.rs
braid_stats/examples/: adaptive_symrw_mv.rs  lnm.rs  novel_label.rs
braid_stats/src/: cdf.rs  chi_square.rs  datum.rs  defaults.rs  entropy.rs  integrate.rs  ks.rs  lib.rs  mat.rs  mh.rs  mixture_type.rs  perm.rs  sample_error.rs  seq.rs  simplex.rs
cli/: Cargo.toml  README.md
cli/src/: opt.rs  routes.rs  utils.rs
cli/tests/: cli.rs
lace/: .dockerignore  .rustfmt.toml  Cargo.toml  Changelog.md  Dockerfile  README.md  add_feature.md  build.rs  deny.toml
lace/benches/: all_algs.rs  feature_prior_update.rs  insert_data.rs  massflip.rs  oracle_fns.rs  state_types.rs
lace/examples/: animals.rs  autoencoder.rs  bench.rs  column_geweke.rs  count_model.rs  mnist.rs  nix.rs  satellites.rs  shapes.rs  state_geweke.rs  update.rs  view_geweke.rs
lace/lace_cc/: Cargo.toml
lace/lace_codebook/: Cargo.toml  README.md
lace/lace_consts/: Cargo.toml
lace/lace_data/: Cargo.toml
lace/lace_flippers/: Cargo.toml  README.md
lace/lace_geweke/: Cargo.toml
lace/lace_metadata/: Cargo.toml  README.md
lace/lace_preprocess_mdbook_yaml/: Cargo.toml
lace/lace_stats/: Cargo.toml  README.md
lace/lace_utils/: Cargo.toml  README.md
lace/src/: bencher.rs  config.rs  defaults.rs  index.rs  lib.rs  misc.rs  prelude.rs
lace/tests/: cli.rs  engine.rs  enum.rs  enum_state.rs  feature.rs  insert_instability.rs  metadata_convert.rs  oracle.rs  state.rs  streaming_insert.rs  view.rs  view_enum.rs  workflow.rs
pybraid/: Cargo.toml  README.md  pyproject.toml  setup.py
pybraid/core/: Cargo.toml
pybraid/pybraid/: engine.py  utils.py
pybraid/src/: df.rs  lib.rs  utils.rs
pylace/: .gitignore  Cargo.toml  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements-lint.txt  setup.py  test_reqs.sh
pylace/core/: Cargo.toml  pyproject.toml
pylace/docs/: requirements.txt
pylace/lace/: __init__.py  analysis.py  codebook.py  dummy_test.py  engine.py  examples.py  plot.py  utils.py
pylace/pylace/: engine.py
pylace/src/: component.rs  df.rs  lib.rs  metadata.rs  transition.rs  update_handler.rs  utils.rs
pylace/tests/: dummy_test.py  example_test.py  test_append_columns.py  test_append_rows.py  test_codebook.py  test_docs.py  test_engine.py  test_index_names.py  test_indexing.py  test_npint_to_category.py  test_pickle.py  test_self_referencing.py
(+855 files in other folders)
