[package]
name = "braid"
version = "0.18.2"
authors = ["Redpoll, LLC <info@redpoll.ai>"]
build = "build.rs"
edition = "2018"

[workspace]
members = [
    ".",
    "braid_utils",
    "braid_stats",
    "braid_codebook",
    "braid_flippers",
    "braid_geweke",
    "braid_consts",
]

[build-dependencies]
dirs = "2"

[lib]
name = "braid"
path = "src/lib.rs"

[[bin]]
name = "braid"
path = "bin/main.rs"

[dependencies]
dirs = "2"
itertools = "0.8"
num = "0.2"
rand_xoshiro = "0.4"
rand_distr = "0.2"
rand = {version="0.7", features=["serde1"]}
time = "0.1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1"
bincode = "1"
rusqlite = "0.18"
structopt = "0.2"
csv = "1"
special = "0.8"
log = "0.4"
env_logger = "0.5"
regex = "1"
num_cpus = "1"
rv = { version = "0.8.2", features = ["serde_support"] }
maplit = "1"
braid_utils = { path = "braid_utils", version = "0.4.4", registry = "redpoll-crates" }
braid_stats = { path = "braid_stats", version = "0.8.0", registry = "redpoll-crates" }
braid_codebook = { path = "braid_codebook", version = "0.7.0", registry = "redpoll-crates" }
braid_flippers = { path = "braid_flippers", version = "0.2.0", registry = "redpoll-crates" }
braid_geweke = { path = "braid_geweke", version = "0.2.0", registry = "redpoll-crates" }
braid_consts = { path = "braid_consts", version = "0.2.2", registry = "redpoll-crates" }
enum_dispatch = "0.1"
prettytable-rs = "0.8"
indexmap = "1"

[dev-dependencies]
approx = "0.3"
serde_test = "1"
tempfile = "3"
criterion = "0.2"
indoc = "0.3"

[[bench]]
name = "state_types"
harness = false

[[bench]]
name = "mi"
harness = false

[[bench]]
name = "insert_data"
harness = false
