[package]
name = "braid"
version = "0.34.1"
authors = ["Redpoll, LLC <info@redpoll.ai>"]
build = "build.rs"
edition = "2018"
exclude = ["tests/*", "resources/test/*", "target/*"]

[workspace]
members = [ ".",
    "braid_utils",
    "braid_stats",
    "braid_codebook",
    "braid_cc",
    "braid_flippers",
    "braid_geweke",
    "braid_consts",
    "braid_data",
    "braid_metadata",
]

[build-dependencies]
dirs = "3"

[lib]
name = "braid"
path = "src/lib.rs"

[[bin]]
name = "braid"
path = "bin/main.rs"

[dependencies]
dirs = "3"
itertools = "0.9"
num = "0.2"
rand_xoshiro = { version="0.6", features = ["serde1"] }
rand_distr = "0.4"
rand = {version="0.8", features=["serde1"]}
time = "0.1"
rayon = "1.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1"
bincode = "1"
structopt = "0.3.23"
csv = "1.1"
special = "0.8"
log = "0.4"
env_logger = "0.7"
regex = "1"
num_cpus = "1"
rv = { version = "0.14.0", features = ["serde1"]}
maplit = "1"
braid_cc = { path = "braid_cc", version = "0.4.1", registry = "redpoll-crates" }
braid_utils = { path = "braid_utils", version = "0.12.0", registry = "redpoll-crates" }
braid_stats = { path = "braid_stats", version = "0.19.1", registry = "redpoll-crates" }
braid_codebook = { path = "braid_codebook", version = "0.20.1", registry = "redpoll-crates" }
braid_flippers = { path = "braid_flippers", version = "0.9.0", registry = "redpoll-crates" }
braid_geweke = { path = "braid_geweke", version = "0.12.1", registry = "redpoll-crates" }
braid_consts = { path = "braid_consts", version = "0.8.0", registry = "redpoll-crates" }
braid_data = { path = "braid_data", version = "0.7.0", registry="redpoll-crates" }
braid_metadata = { path = "braid_metadata", version = "0.4.1", registry="redpoll-crates" }
enum_dispatch = "0.3"
indexmap = { version = "1.5.1", features = ["serde-1"] }
thiserror = "1.0.19"
once_cell = "1"
hex = "0.4"
peroxide = "0.30"

[dev-dependencies]
approx = "0.3"
tempfile = "3"
criterion = "0.2"
indoc = "0.3"
plotly = "0.6"

[profile.release]
lto = "fat"

[profile.bench]
lto = "fat"
codegen-units = 1

[[bench]]
name = "insert_data"
harness = false

[[bench]]
name = "oracle_fns"
harness = false
