[package]
name = "braid"
version = "0.40.0"
authors = ["Redpoll, LLC <info@redpoll.ai>"]
build = "build.rs"
edition = "2018"
exclude = ["tests/*", "resources/test/*", "target/*"]
rust-version = "1.58.1"

[workspace]
members = [ ".",
    "braid_utils",
    "braid_stats",
    "braid_codebook",
    "braid_cc",
    "braid_flippers",
    "braid_geweke",
    "braid_consts",
    "braid_data",
    "braid_metadata",
]

[build-dependencies]
dirs = "4"

[lib]
name = "braid"
path = "src/lib.rs"

[[bin]]
name = "braid"
path = "bin/main.rs"

[dependencies]
rp-machine-id = { version = "0.1.0", registry = "redpoll-crates", optional = true}
dirs = "4"
itertools = "0.10.3"
num = "0.4"
rand_xoshiro = { version="0.6", features = ["serde1"] }
rand_distr = "0.4"
rand = {version="0.8", features=["serde1"]}
rayon = "1.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.4"
serde_json = "1"
bincode = "1"
toml = "0.5"
clap = { version = "3.2.17", features = ["derive"] }
special = "0.8"
log = "0.4"
env_logger = "0.9"
regex = "1"
rv = { version = "0.15.0-rc.1", features = ["serde1"]}
maplit = "1"
braid_cc = { path = "braid_cc", version = "0.8.0", registry = "redpoll-crates" }
braid_utils = { path = "braid_utils", version = "0.13.3", registry = "redpoll-crates" }
braid_stats = { path = "braid_stats", version = "0.22.1", registry = "redpoll-crates" }
braid_codebook = { path = "braid_codebook", version = "0.23.1", registry = "redpoll-crates" }
braid_flippers = { path = "braid_flippers", version = "0.10.1", registry = "redpoll-crates" }
braid_geweke = { path = "braid_geweke", version = "0.15.1", registry = "redpoll-crates" }
braid_consts = { path = "braid_consts", version = "0.8.0", registry = "redpoll-crates" }
braid_data = { path = "braid_data", version = "0.8.2", registry="redpoll-crates" }
braid_metadata = { path = "braid_metadata", version = "0.8.0", registry="redpoll-crates" }
indexmap = { version = "1.5.1", features = ["serde-1"] }
thiserror = "1.0.19"
indicatif = "0.17.0"
ctrlc = "3.2.1"
chrono = { version = "0.4.21", optional = true, default-features = false }
flate2 = "1.0.23"
tokio = { version = "1.19.2", features=["rt", "macros", "rt-multi-thread", "sync"] }
polars = { version = "0.25.1", features = ["parquet", "json", "ipc", "dtype-full", "decompress"] }

[dev-dependencies]
approx = "0.5.1"
tempfile = "3"
criterion = "0.2"
indoc = "1.0.7"
once_cell = "1.13.0"
plotly = "0.7"

[features]
default = ["dev"]
idlock = ["rp-machine-id", "chrono"]
dev = []

[profile.release]
lto = "fat"

[profile.bench]
lto = "fat"
codegen-units = 1

[[bench]]
name = "insert_data"
harness = false

[[bench]]
name = "oracle_fns"
harness = false
