[package]
name = "braid_cc"
version = "0.6.0"
authors = ["Redpoll, LLC <info@redpoll.ai>"]
edition = "2018"
exclude = ["tests/*", "resources/test/*", "target/*"]

[dependencies]
rand_distr = "0.4"
rand = {version="0.8", features=["serde1"]}
time = "0.1"
rayon = "1.5"
serde = { version = "1", features = ["derive"] }
rv = { version = "0.14.0", features = ["serde1"]}
braid_utils = { path = "../braid_utils", version = "0.13.0", registry = "redpoll-crates" }
braid_stats = { path = "../braid_stats", version = "0.21.0", registry = "redpoll-crates" }
braid_flippers = { path = "../braid_flippers", version = "0.10.0", registry = "redpoll-crates" }
braid_geweke = { path = "../braid_geweke", version = "0.14.0", registry = "redpoll-crates" }
braid_consts = { path = "../braid_consts", version = "0.8.0", registry = "redpoll-crates" }
braid_data = { path = "../braid_data", version = "0.8.1", registry="redpoll-crates" }
braid_codebook = { path = "../braid_codebook", version = "0.22.0", registry="redpoll-crates" }
enum_dispatch = "0.3"
thiserror = "1.0.19"
once_cell = "1"
rand_xoshiro = { version="0.6", features = ["serde1"] }
special = "0.8"
itertools = "0.10"
indicatif = "0.16.2"

[dev-dependencies]
approx = "0.3"
criterion = "0.2"
indoc = "0.3"

[[bench]]
name = "state_types"
harness = false

[[bench]]
name = "all_algs"
harness = false

[[bench]]
name = "feature_prior_update"
harness = false
