[package]
name = "braid_codebook"
version = "0.8.0"
authors = ["Redpoll, LLC <info@redpoll.ai>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
braid_consts = { path = "../braid_consts", version = "0.2.3", registry = "redpoll-crates" }
braid_stats = { path = "../braid_stats", version = "0.9.1", registry = "redpoll-crates" }
braid_utils = { path = "../braid_utils", version = "0.5.0", registry = "redpoll-crates" }
maplit = "1"
rv = { version = "0.8.3", features = ["serde_support"] }
csv = "1.0.0-beta.5"
rand = {version="0.7", features=["serde1"]}
thiserror = "1.0.11"

[dev-dependencies]
indoc = "*"
