[package]
name = "braid_codebook"
version = "0.19.0"
authors = ["Redpoll, LLC <info@redpoll.ai>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
braid_consts = { path = "../braid_consts", version = "0.7.1", registry = "redpoll-crates" }
braid_stats = { path = "../braid_stats", version = "0.18.0", registry = "redpoll-crates" }
braid_utils = { path = "../braid_utils", version = "0.11.1", registry = "redpoll-crates" }
braid_data = { path = "../braid_data", version = "0.6.1", registry = "redpoll-crates" }
maplit = "1"
rv = { version = "0.13.1", features = ["serde1"]}
csv = "1"
rand = {version="0.7", features=["serde1"]}
thiserror = "1.0.11"
rayon = "1.5"

[dev-dependencies]
indoc = "*"
