[package]
name = "braid_flippers"
version = "0.5.1"
authors = ["Redpoll, LLC <info@redpoll.ai>"]
edition = "2018"

[dependencies]
rand = {version="0.7", features=["serde1"]}
braid_utils = { path = "../braid_utils", version = "0.8.1", registry = "redpoll-crates" }
rayon = "1"

[dev-dependencies]
criterion = "0.2"
rand_core = "0.5"
rand_xoshiro = "0.4"

[[bench]]
name = "benches"
harness = false
