[package]
name = "braid_flippers"
version = "0.8.0"
authors = ["Redpoll, LLC <info@redpoll.ai>"]
edition = "2018"

[dependencies]
rand = {version="0.8", features=["serde1"]}
braid_utils = { path = "../braid_utils", version = "0.11.0", registry = "redpoll-crates" }
rayon = "1"

[dev-dependencies]
criterion = "0.2"
rand_xoshiro = "0.6"

[[bench]]
name = "benches"
harness = false
