[package]
name = "braid_geweke"
version = "0.6.0"
authors = ["Redpoll, LLC <info@redpoll.ai>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
braid_stats = { path = "../braid_stats", version = "0.13.0", registry = "redpoll-crates" }
braid_utils = { path = "../braid_utils", version = "0.9.0", registry = "redpoll-crates" }
indicatif = "0.14"
rand = { version="0.7", features=["serde1"] }
rv = "0.11.0-beta.1"
