[package]
name = "braid_metadata"
version = "0.4.2"
authors = ["Redpoll, LLC <info@redpoll.ai>"]
edition = "2018"

[dependencies]
dirs = "3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
toml = "0.5"
bincode = "1"
ring = "0.16.20"
log = "0.4"
rv = { version = "0.14.0", features = ["serde1"]}
braid_stats = { path = "../braid_stats", version = "0.19.1", registry = "redpoll-crates" }
braid_data = { path = "../braid_data", version = "0.7.0", registry = "redpoll-crates" }
braid_codebook = { path = "../braid_codebook", version = "0.20.2", registry = "redpoll-crates" }
braid_cc = { path = "../braid_cc", version = "0.4.1", registry = "redpoll-crates" }
rand_xoshiro = { version="0.6", features = ["serde1"] }
thiserror = "1.0.19"
once_cell = "1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
