[package]
name = "braid_server"
version = "0.39.0"
authors = ["Redpoll, LLC <info@redpoll.ai>"]
edition = "2018"

[dependencies]
braid = { path = "../braid", version="0.39.0", registry="redpoll-crates" }
structopt = "0.3"
rand = "0.8"
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.83"
lazy_static = "1"
bincode = "1.3"
hex = "0.4.3"
rp-machine-id = { version = "0.1.0", registry = "redpoll-crates", optional = true }
chrono = { version = "0.4.21", optional = true }
flate2 = "1.0.22"
tar = "0.4.38"
tempfile = "3.3"
utoipa = "1.1.0"
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }
derive_more = "0.99.17"
utoipa-swagger-ui = "1.1.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing = "0.1.36"

[features]
idlock = ["rp-machine-id", "chrono"]

[dev-dependencies]
env_logger = "0.9.0"
semver = "1.0.13"
test-log = "0.2.11"
