[package]
name = "braid_stats"
version = "0.7.4"
authors = ["Redpoll, LLC <info@redpoll.ai>"]
edition = "2018"

[dependencies]
special = "0.8"
rand = {version="0.7", features=["serde1"]}
rand_xoshiro = "0.4"
rv = { version = "0.7.2", features = ["serde_support"] }
itertools = "0.8.0"
serde = { version = "1.0.89", features = ["derive"] }
braid_utils = { path = "../braid_utils" }
braid_consts = { path = "../braid_consts" }
regex = "1.1"

[dev-dependencies]
approx = "0.3.1"
criterion = "0.2"
maplit = "1"
rand_distr = "0.2"

[[bench]]
name = "labeler"
harness = false

[[bench]]
name = "seq"
harness = false

[[bench]]
name = "simplex"
harness = false
