[package]
name = "braid_stats"
version = "0.11.0"
authors = ["Redpoll, LLC <info@redpoll.ai>"]
edition = "2018"

[dependencies]
special = "0.8"
rand = {version="0.7", features=["serde1"]}
rand_xoshiro = "0.4"
rv = { version = "0.9.2", features = ["serde1"]}
itertools = "0.8"
serde = { version = "1", features = ["derive"] }
braid_utils = { path = "../braid_utils", version = "0.7.0", registry = "redpoll-crates" }
braid_consts = { path = "../braid_consts", version = "0.3.0", registry = "redpoll-crates" }
regex = "1"
thiserror = "1.0.11"

[dev-dependencies]
approx = "0.3.2"
criterion = "0.2"
maplit = "1"
rand_distr = "0.2"

[[bench]]
name = "labeler"
harness = false

[[bench]]
name = "seq"
harness = false

[[bench]]
name = "simplex"
harness = false
