[package]
name = "lace"
version = "0.3.0"
authors = ["Promised AI"]
build = "build.rs"
edition = "2021"
exclude = ["tests/*", "resources/test/*", "target/*"]
rust-version = "1.58.1"
license = "SSPL-1.0"
homepage = "https://www.lace.dev/"
repository = "https://github.com/promised-ai/lace"
description = "A probabilistic cross-categorization engine"

[workspace]
members = [
    "lace_utils",
    "lace_stats",
    "lace_codebook",
    "lace_cc",
    "lace_geweke",
    "lace_consts",
    "lace_data",
    "lace_metadata",
]

[build-dependencies]
dirs = "5"

[lib]
name = "lace"
path = "src/lib.rs"

[[bin]]
name = "lace"
path = "bin/main.rs"

[dependencies]
lace_cc = { path = "lace_cc", version = "0.1.4" }
lace_utils = { path = "lace_utils", version = "0.1.2" }
lace_stats = { path = "lace_stats", version = "0.1.3" }
lace_codebook = { path = "lace_codebook", version = "0.1.4" }
lace_geweke = { path = "lace_geweke", version = "0.1.2" }
lace_consts = { path = "lace_consts", version = "0.1.4" }
lace_data = { path = "lace_data", version = "0.1.2" }
lace_metadata = { path = "lace_metadata", version = "0.1.4" }
dirs = "5"
itertools = "0.11"
num = "0.4"
rand_xoshiro = { version="0.6", features = ["serde1"] }
rand_distr = "0.4"
rand = {version="0.8", features=["serde1"]}
rayon = "1.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.4"
serde_json = "1"
bincode = "1"
toml = "0.7"
clap = { version = "4.3.17", features = ["derive"] }
special = "0.10"
log = "0.4"
env_logger = "0.10"
regex = "1"
maplit = "1"
indexmap = { version = "2.0.0", features = ["serde"] }
thiserror = "1.0.19"
indicatif = "0.17.0"
ctrlc = "3.2.1"
flate2 = "1.0.23"
polars = { version = "0.32.1", features = ["parquet", "json", "ipc", "dtype-full", "decompress"] }

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.4"
criterion = "0.5"
indoc = "2.0.3"
once_cell = "1.13.0"
plotly = "0.8"

[profile.release]
lto = "fat"

[profile.bench]
lto = "fat"
codegen-units = 1

[[bench]]
name = "insert_data"
harness = false

[[bench]]
name = "oracle_fns"
harness = false
