[package]
name = "lace"
version = "0.7.0"
authors = ["Promised AI"]
build = "build.rs"
edition = "2021"
exclude = ["resources/test/*", "target/*"]
rust-version = "1.62.0"
license = "BUSL-1.1"
homepage = "https://www.lace.dev/"
repository = "https://github.com/promised-ai/lace"
description = "A probabilistic cross-categorization engine"

[workspace]
members = [
    "lace_utils",
    "lace_stats",
    "lace_codebook",
    "lace_cc",
    "lace_geweke",
    "lace_consts",
    "lace_data",
    "lace_metadata",
]

[build-dependencies]
dirs = "5"

[lib]
name = "lace"
path = "src/lib.rs"

[dependencies]
lace_cc = { path = "lace_cc", version = "0.6.0" }
lace_utils = { path = "lace_utils", version = "0.3.0" }
lace_stats = { path = "lace_stats", version = "0.3.0" }
lace_codebook = { path = "lace_codebook", version = "0.6.0", default_features=false}
lace_geweke = { path = "lace_geweke", version = "0.3.0" }
lace_consts = { path = "lace_consts", version = "0.2.1" }
lace_data = { path = "lace_data", version = "0.3.0" }
lace_metadata = { path = "lace_metadata", version = "0.6.0" }
dirs = { version="5", optional = true}
num = "0.4"
rand_xoshiro = { version="0.6", features = ["serde1"] }
rand_distr = "0.4"
rand = {version="0.8", features=["serde1"]}
rayon = "1.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.4"
serde_json = "1"
maplit = "1"
indexmap = { version = "2.0.0", features = ["serde"] }
thiserror = "1.0.19"
indicatif = "0.17.0"
ctrlc = { version = "3.2.1", optional = true }
polars = { version = "0.36", default_features=false, features=["csv", "dtype-i8", "dtype-i16", "dtype-u8", "dtype-u16"] }

[dev-dependencies]
clap = { version = "4.3.17", features = ["derive"] }
approx = "0.5.1"
tempfile = "3.4"
criterion = "0.5"
indoc = "2.0.3"
plotly = "0.8"

[features]
default = ["examples"]
examples = ["dep:dirs"]
ctrlc_handler = ["dep:ctrlc"]
bencher = ["formats", "examples"]
formats = ["lace_codebook/formats"]

[[example]]
name = "animals"
required-features = ["examples"]

[[example]]
name = "satellites"
required-features = ["examples"]

[[example]]
name = "update"
required-features = ["examples"]

[[test]]
name = "engine"
required-features = ["examples"]

[[test]]
name = "workflow"
required-features = ["formats"]

[profile.release]
lto = "fat"

[profile.bench]
lto = "fat"
codegen-units = 1

[[bench]]
name = "insert_data"
harness = false

[[bench]]
name = "oracle_fns"
harness = false
required-features = ["examples"]
