[package]
name = "lace"
version = "0.9.0"
authors = ["Redpoll"]
build = "build.rs"
edition = "2021"
exclude = ["resources/test/*", "target/*"]
rust-version = "1.70.0"
license = "MIT"
homepage = "https://www.lace.dev/"
repository = "https://github.com/promised-ai/lace"
description = "A probabilistic cross-categorization engine"

[build-dependencies]
dirs = "5"

[lib]
name = "lace"
path = "src/lib.rs"

[dependencies]
rv = { version = "0.19.1", features = ["serde1", "arraydist"] }
dirs = { version = "5", optional = true }
enum_dispatch = "0.3.13"
num = "0.4"
log = "0.4.28"
rand = { version = "0.9", features = ["serde"] }
rand_xoshiro = { version = "0.7", features = ["serde"] }
rand_distr = "0.5"
rayon = "1.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.4"
serde_json = "1"
bincode = "1"
special = "0.10"
itertools = "0.12"
maplit = "1"
indexmap = { version = "2.0.0", features = ["serde"] }
thiserror = "1.0.19"
indicatif = "0.17.0"
ctrlc = { version = "3.2.1", optional = true }
polars = { version = "0.52", default_features = false, features = [
  "csv",
  "dtype-i8",
  "dtype-i16",
  "dtype-u8",
  "dtype-u16",
] }

[dev-dependencies]
clap = { version = "4.3.17", features = ["derive"] }
approx = "0.5.1"
tempfile = "3.4"
criterion = "0.5"
indoc = "2.0.3"
plotly = "0.8"

[features]
default = ["examples"]
examples = ["dep:dirs"]
ctrlc_handler = ["dep:ctrlc"]
bencher = ["formats", "examples"]
formats = ["polars/json", "polars/ipc", "polars/decompress", "polars/parquet"]

[[example]]
name = "animals"
required-features = ["examples"]

[[example]]
name = "satellites"
required-features = ["examples"]

[[example]]
name = "update"
required-features = ["examples"]

[[test]]
name = "engine"
required-features = ["examples"]

[[test]]
name = "workflow"
required-features = ["formats"]

[profile.release]
lto = "fat"

[profile.bench]
lto = "fat"
codegen-units = 1

[[bench]]
name = "insert_data"
harness = false

[[bench]]
name = "oracle_fns"
harness = false
required-features = ["examples"]

[[bench]]
name = "state_types"
harness = false

[[bench]]
name = "all_algs"
harness = false

[[bench]]
name = "feature_prior_update"
harness = false

[[bench]]
name = "massflip"
hequired-features = ["examples"]
