[package]
name = "pybraid"
version = "0.40.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pybraid"
crate-type = ["cdylib"]

[dependencies]
braid = { path = "../braid", version="0.40.0", registry="redpoll-crates" }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
pyo3 = { version = "0.17.1", features = ["extension-module"] }
rv = "0.14.3"
regex = "1.6"
numpy = "0.17.2"
