[package]
name = "pylace"
version = "0.9.0"
edition = "2021"
license = "MIT"

[lib]
name = "lace"
crate-type = ["cdylib"]

[dependencies]
lace = { path = "../lace", version = "0.9.0" }
rand = { version = "0.9" }
rand_xoshiro = "0.7.0"
pyo3 = { version = "0.21", features = ["extension-module"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
polars = "0.52.0"
polars-arrow = "0.52.0"
serde = { version = "1.0.196", features = ["derive"] }
bincode = "1.3.3"

[package.metadata.maturin]
name = "lace.core"
