[package]
name = "pylace"
version = "0.10.1"
edition = "2021"
license = "MIT"
rust-version = "1.89.0"

[lib]
name = "lace"
crate-type = ["cdylib"]

[dependencies]
lace = { path = "../lace", version = "0.9.1" }
rand = { version = "0.9" }
rand_xoshiro = "0.7.0"
pyo3 = { version = "0.27", features = ["extension-module"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
polars = "0.52.0"
polars-arrow = "0.52.0"
serde = { version = "1.0.196", features = ["derive"] }
bincode = "1.3"

[patch.crates-io]
# polars is using an old insecure version of bytes
bytes = { git = "https://github.com/tokio-rs/bytes", tag = "v1.11.1" }

[package.metadata.maturin]
name = "lace.core"

[lints.clippy]
doc_link_with_quotes = "allow"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
doc_markdown = "allow"
