[build-system]
requires = ["maturin>=1.0,<2", "setuptools >= 77"]
build-backend = "maturin"

[project]
name = "pylace"
version = "0.10.0"
description = "A probabalistic programming ML tool for science"
requires-python = ">=3.10,<3.15"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
]
license = "MIT"
authors = [
  { name = "Baxter Eaves", email = "bax@redpoll.ai" },
  { name = "Michael Schmidt", email = "schmidt@redpoll.ai" },
]
maintainers = [
  { name = "Baxter Eaves", email = "bax@redpoll.ai" },
  { name = "Michael Schmidt", email = "schmidt@redpoll.ai" },
]

dependencies = [
  'numpy >= 1.26, < 3',
  'matplotlib >= 3.8, < 4',
  'seaborn >= 0.5, < 1',
  'pandas >= 1.4, < 3',
  'polars >= 1, < 2',
  'scipy >= 1.12, < 2',
  'plotly >= 5, < 7',
  'tqdm >= 4.27, < 5',
  'pyarrow >= 16, < 23',
  'setuptools >= 2',
]

[project.urls]
Repository = "https://github.com/promised-ai/lace"

[tool.mypy]
files = ["lace"]
strict = true
enable_error_code = ["redundant-expr", "truthy-bool", "ignore-without-code"]

disable_error_code = ["empty-body"]

[[tool.mypy.overrides]]
module = ["lace.core.*"]
warn_return_any = false


[tool.ruff]
target-version = "py37"
line-length = 100
fix = true

[lint]
# leave my Greeks alone!
allowed-confusables = ["ρ", "α"]

select = [
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # Pyflakes
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "I",   # isort
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "Q",   # flake8-quotes
  "UP",  # pyupgrade
  "PT",  # flake8-pytest-style
  "RUF", # Ruff-specific rules
]

ignore = [
  # Line length regulated by black
  "E501",
  # pydocstyle: http://www.pydocstyle.org/en/stable/error_codes.html
  # numpy convention with a few additional lints
  "D107",
  "D202", # No blank lines allowed after function docstring -> clashes with Black
  "D203",
  "D212",
  "D401",
  "D402",
  "D415",
  "D416",
  # flake8-pytest-style:
  "PT011", # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
  # flake8-simplify
  "SIM102", # Use a single `if` statement instead of nested `if` statements
  # ruff
  "RUF005", # unpack-instead-of-concatenating-to-collection-literal
  "D100",
  "D101",
  "D103",
  "D105",
  "D417",
  "TCH001",
  "SIM114",
]

[lint.ruff.pycodestyle]
max-doc-length = 100

[lint.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[lint.ruff.flake8-type-checking]
strict = true

[tool.black]
line-length = 80

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "Cargo.toml" },
  { file = "**/*.rs" },
]

[tool.maturin]
module-name = "lace.core"

[dependency-groups]
dev = [
  "hypothesis ~= 6.100",
  "maturin ~= 1.5",
  "pytest ~= 8.2",
  "pytest-cov ~= 5.0",
  "pytest-xdist ~= 3.6",
  "black ~= 23.1",
  "blackdoc ~= 0.3",
  "mypy ~= 1.0",
  "ruff ~= 0.0",
  "vermin ~= 1.8",
  "kaleido ~= 1.2",
  "ipython >= 8, < 10",
  "nbformat >= 4.2.0",
]
docs = [
  "commonmark ~= 0.9",
  "mock ~= 1.0",
  "pillow ~= 12.1",
  "recommonmark ~= 0.5",
  "sphinx-rtd-theme ~= 1.2",
  "sphinx ~= 6.2",
]
